--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://colbyschulz.github.io/p4c-ota-install/gbePathfinderMobile.ipa</string>
+					<string>https://p4c-ota-install.herokuapp.com/gbePathfinderMobile.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://colbyschulz.github.io/p4c-ota-install/58.png</string>
+					<string>https://p4c-ota-install.herokuapp.com/58.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://colbyschulz.github.io/p4c-ota-install/180.png</string>
+					<string>https://p4c-ota-install.herokuapp.com/180.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -31,7 +31,7 @@
 				<key>bundle-identifier</key>
 				<string>org.nationalGrid.gbePathfinderMobile</string>
 				<key>bundle-version</key>
-				<string>1.7</string>
+				<string>1.6.3</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>platform-identifier</key>
