--- a/manifest.plist
+++ b/manifest.plist
@@ -11,33 +11,33 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://p4c-ota-install.herokuapp.com/gbePathfinderMobile.ipa</string>
+					<string>https://colbyschulz.github.io/p4c-ota-install/Pathfinder.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://p4c-ota-install.herokuapp.com/58.png</string>
+					<string>https://colbyschulz.github.io/p4c-ota-install/58</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://p4c-ota-install.herokuapp.com/180.png</string>
+					<string>https://colbyschulz.github.io/p4c-ota-install/180</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>org.nationalGrid.gbePathfinderMobile</string>
+				<string>org.nationalGrid.gbePathfinderCorrosion</string>
 				<key>bundle-version</key>
-				<string>1.6.3</string>
+				<string>1.6.4</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>gbePathfinderMobile</string>
+				<string>Pathfinder</string>
 			</dict>
 		</dict>
 	</array>
