update manifest to include .png extension

--- a/manifest.plist
+++ b/manifest.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://colbyschulz.github.io/p4c-ota-install/58</string>
+					<string>https://colbyschulz.github.io/p4c-ota-install/58.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://colbyschulz.github.io/p4c-ota-install/180</string>
+					<string>https://colbyschulz.github.io/p4c-ota-install/180.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
