--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://colbyschulz.github.io/p4c-ota-install/Pathfinder.ipa</string>
+					<string>https://colbyschulz.github.io/p4c-ota-install/pathfinder.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>Pathfinder</string>
+				<string>pathfinder</string>
 			</dict>
 		</dict>
 	</array>
